<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

    </group>

    <item android:title="Communicate">
        <menu>


            <item
                android:id="@+id/menuopcio1"

                android:title="@string/menu_opcio1" />
            <item
                android:id="@+id/menuopcio2"

                android:title="@string/menu_opcio2" />
            <item
                android:id="@+id/menuopcio3"

                android:title="@string/menu_opcio3" />
            <item
                android:id="@+id/menuopcio4"

                android:title="@string/menu_opcio4" />
            <item
                android:id="@+id/menuopcio5"

                android:title="@string/menu_opcio5" />
            <item
                android:id="@+id/menuopcio6"

                android:title="@string/menu_opcio6" />
            <item
                android:id="@+id/menuopcio7"

                android:title="@string/menu_opcio7" />
        </menu>
    </item>

</menu>
