<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Raro"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/fotoPortada"
        android:layout_marginVertical="240dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/animation"

        />

    <com.sunfusheng.marqueeview.MarqueeView
        android:id="@+id/marqueeView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"

        app:mvAnimDuration="1500"

        app:mvInterval="2500"
        app:mvTextColor="@color/White"
        app:mvTextSize="30sp"
        android:textAlignment="center"
        app:mvSingleLine="true"
        android:layout_marginVertical="270dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginVertical="120dp"
        android:text="@string/text_home"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/barceloninatitulo"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginVertical="50dp"
        android:layout_marginEnd="0dp"
        android:alpha="1.0"
        android:fontFamily="cursive"
        android:text="@string/text_home1"

        android:textAlignment="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textoPagina"
        android:layout_width="match_parent"
        android:layout_height="49dp"

        android:text="@string/text_home2"
        android:textSize="25sp"
        android:layout_marginVertical="140dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/movidito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:focusable="false"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/text_movidito"
        android:layout_marginVertical="210dp"
        android:textSize="14sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/explorarTours"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginVertical="490dp"
        android:ellipsize="none"
        android:background="@drawable/rounded_shape_blau"


        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/explorar_tours" />


</FrameLayout>