<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="5dp"
                android:text="@string/nav_header_title"
                android:textSize="24sp"
                android:textAlignment="center">

            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/hacer_reserva"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="22dp">

        </TextView>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Nom"
            android:padding="5dp"
            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">

        </EditText>
        <EditText
            android:id="@+id/apellidos"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Cognoms"
            android:padding="5dp"
            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">
        </EditText>
        <EditText
            android:id="@+id/emailreserva"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Email"
            android:padding="5dp"

            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">
        </EditText>
        <EditText
            android:id="@+id/ciutat"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Ciutat"
            android:padding="5dp"

            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">
        </EditText>
        <EditText
            android:id="@+id/pais"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Pais"
            android:padding="5dp"

            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/reservar_fecha"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="18dp">

        </TextView>

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <EditText
            android:id="@+id/observacions"
            android:layout_width="290dp"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTextBoxBack"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:hint="Observacions"
            android:padding="5dp"

            android:textColor="@color/colorInput"
            android:textColorHint="@color/colorHint"
            android:textSize="18sp">
        </EditText>
        <Button
            android:id="@+id/enviarcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Enviar">

        </Button>
    </LinearLayout>

</ScrollView>